update project name, and config field names

--- a/FindNearby/force-app/main/default/lwc/locationsList/locationsList.html
+++ b/FindNearby/force-app/main/default/lwc/locationsList/locationsList.html
@@ -54,7 +54,7 @@
                             <div class="icon-and-text">
                                 <c-object-icon icon-url={marker.value.iconUrl} color={marker.value.color}></c-object-icon>
                                 <lightning-tile label={marker.value.title}>
-                                    <p class="tile-subtitle slds-truncate">{marker.value.distance} • {marker.value.secondFieldValue}</p>
+                                    <p class="tile-subtitle slds-truncate">{marker.value.distance} • {marker.value.detailFieldValue}</p>
                                 </lightning-tile>
                             </div>
                             <div class="actions-button">
