fix label warnings

--- a/FindNearby/force-app/main/default/lwc/locationsList/locationsList.html
+++ b/FindNearby/force-app/main/default/lwc/locationsList/locationsList.html
@@ -59,9 +59,9 @@
                             </div>
                             <div class="actions-button">
                                 <button
-                                    class="slds-m-left_x-small slds-button_stretch"
+                                    class="slds-var-m-left_x-small slds-button_stretch"
                                     onclick={handleActionsButtonClick}>
-                                    •••
+                                    <label>•••</label>
                                 </button>
                             </div>
                         </div>
