--- a/FindNearby/force-app/main/default/lwc/mapFilters/mapFilters.html
+++ b/FindNearby/force-app/main/default/lwc/mapFilters/mapFilters.html
@@ -1,6 +1,7 @@
 <template>
     <div class="buttons-container">
         <button class="button filter-button active-button" onclick={handleTopFiltersObjClick}>
+            <label></label>
             <div class="button-text">
                 <div class="button-text-title">Type</div>
                 <div class="button-text-main">{ filteredObjectText }</div>
