--- a/FindNearby/force-app/main/default/lwc/mobileMap/mobileMap.html
+++ b/FindNearby/force-app/main/default/lwc/mobileMap/mobileMap.html
@@ -23,7 +23,9 @@
                         <p class="title-text">{currentMarkerTitle}</p>
                     </div>
                     <button class="x" onclick={handleCloseCardClick}>
-                        <lightning-icon alternative-text="Close" icon-name="utility:close" size="x-small" class="x-icon"></lightning-icon>
+                        <lightning-icon alternative-text="Close" icon-name="utility:close" size="x-small" class="x-icon">
+                            <label></label>
+                        </lightning-icon>
                     </button>
                 </div>
                 <div class="card-main">
