PR review fixes: adding labels and aria-lables, config changes, aaCalendar rename

--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingResourceAssignment/mobileAppointmentBookingResourceAssignment.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingResourceAssignment/mobileAppointmentBookingResourceAssignment.html
@@ -8,7 +8,7 @@
         <template if:false={showExcludedMsg}>
             <div>
                 <lightning-radio-group name="resourceAssignment"
-                          label=""
+                          aria-label={resourceAssignmentTitle}
                           options={options}
                           value={value}
                           type="radio"
