--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingCustomToast/mobileAppointmentBookingCustomToast.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingCustomToast/mobileAppointmentBookingCustomToast.html
@@ -2,11 +2,11 @@
     <div class="slds-notify_container custom-toast-container">
         <div class={toastClass} id="variant-container" role="status">
         <span class="slds-assistive-text">{variant}</span>
-            <button class="slds-button slds-button_icon slds-button_icon-inverse" title="Close" onclick={handleCloseToast}>
+            <button class="slds-button slds-button_icon slds-button_icon-inverse" title="Close" label="Close" onclick={handleCloseToast}>
                 <svg class="slds-button__icon slds-button__icon_large" aria-hidden="true">
                 <use xlink:href="/_slds/icons/utility-sprite/svg/symbols.svg#close"></use>
                 </svg>
-                <span class="slds-assistive-text">Close</span>
+                <span class="slds-assistive-text"></span>
             </button>
         <div class="slds-notify__content content-container">
             <h2 class="slds-text-heading_small ">{title}
