--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSlotsContainer/mobileAppointmentBookingSlotsContainer.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSlotsContainer/mobileAppointmentBookingSlotsContainer.html
@@ -9,7 +9,7 @@
             
             <template for:each={timeSlotArr.timeArray} for:item="timeArray">
                 <button key={timeArray} class="slds-button slds-button_neutral timeslotButton" 
-                    title={timeArray.fullValue} slot="actions" onclick={handleTimeSlotClickEvent}>
+                    title={timeArray.fullValue} label={timeArray.label} slot="actions" onclick={handleTimeSlotClickEvent} >
                     {timeArray.label}
                 </button>
               </template>
@@ -25,7 +25,7 @@
                 
                 <template for:each={timeSlotNewArray.timeArray} for:item="timeArray">
                     <button key={timeArray} class="slds-button slds-button_neutral timeslotButton" 
-                        title={timeArray.fullValue} slot="actions" onclick={handleTimeSlotClickEvent}>
+                        title={timeArray.fullValue} label={timeArray.label} slot="actions" onclick={handleTimeSlotClickEvent}>
                         {timeArray.label}
                     </button>
                   </template>
