PR review fixes: Modified control param names (to camel case)

--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
@@ -15,19 +15,19 @@
         </div>       
         <div class="landing-section">
             <c-mobile-appointment-booking-scheduling-container
-                showexactarrivaltime = {showExactArrivalTime} 
-                serviceappointmentobject = {currentAppointmentData}
+                show-exact-arrival-time = {showExactArrivalTime} 
+                service-appointment-object = {currentAppointmentData}
                 oneventname = {onButtonClick}
-                shownoofdaysbeforeafterweek = {noOfDaysBeforeAfterWeek}
-                serviceresourceobj = {serviceResourceObject}
-                timeslotobject = {timeSlotDateWise}
+                show-no-of-days-before-after-week = {noOfDaysBeforeAfterWeek}
+                service-resource-obj = {serviceResourceObject}
+                time-slot-object = {timeSlotDateWise}
                 ondateselection = {onDateSelected}
                 ongetslotexecuted = {handleGetSlotQueryForSelectedDate}
-                selecteddate = {selectedDate}
-                maxvaliddate = {maxValidCalendarDate}
-                schedulepolicy = {schedulingPolicyId}
+                selected-date = {selectedDate}
+                max-valid-date = {maxValidCalendarDate}
+                schedule-policy = {schedulingPolicyId}
                 onserviceappointmentupdate = {onServiceAppointmentUpdate}
-                showdataspinner = {showSpinnerInChildClass} 
+                show-data-spinner = {showSpinnerInChildClass} 
                 page-title = ""
                 worktype-displayname=""
                 recommended-score={recommendedScore}
