--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSchedulingContainer/mobileAppointmentBookingSchedulingContainer.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSchedulingContainer/mobileAppointmentBookingSchedulingContainer.html
@@ -15,22 +15,22 @@
         <c-mobile-appointment-booking-calendar class="calendarInfo"
             ondateselection = {onDateSelected}
             onweekchangeevent = {onWeekChangeEvent}
-            selecteddate = {selectedDate} 
-            maxvaliddate = {maxValidCalendarDate}
-            nonavailabledates = {nonAvailableDateArray} 
+            selected-date = {selectedDate} 
+            max-valid-date = {maxValidCalendarDate}
+            non-available-dates = {nonAvailableDateArray} 
             appointment-date = {SchedStartTime} >
         </c-mobile-appointment-booking-calendar>
     </div>
     
     <c-mobile-appointment-booking-slots-container 
         page-title={allAppointmentsTitle}
-        showexactarrivaltime = {showExactArrivalTime} 
-        shownoofdaysbeforeafterweek = {noOfDaysBeforeAfterWeek}
-        selecteddate = {selectedDate}
-        maxvaliddate = {maxValidCalendarDate}
+        show-exact-arrival-time = {showExactArrivalTime} 
+        show-no-of-days-before-after-week = {noOfDaysBeforeAfterWeek}
+        selected-date = {selectedDate}
+        max-valid-date = {maxValidCalendarDate}
         onslotselection = {onSlotSelection}
         oncustomeventcalled = {onCustomEventCalled}
-        timeslotobject = {timeSlotObject}
+        time-slot-object = {timeSlotObject}
         >
     </c-mobile-appointment-booking-slots-container >
 
