Added Empty Screens UI && Mobile worker radio is hidden or displayed according to setting confiurations

--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
@@ -35,6 +35,7 @@
                 user-id={userId}
                 show-assignment-method-toggle={showAssignmentMethodToggle}
                 is-excluded={isExcluded}
+                show-mobile-worker-choice={showMobileWorkerChoice}>
                 >
             </c-mobile-appointment-booking-scheduling-container>
         </div>
