--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSchedulingContainer/mobileAppointmentBookingSchedulingContainer.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSchedulingContainer/mobileAppointmentBookingSchedulingContainer.html
@@ -6,6 +6,7 @@
             user-name={userName}
             selecteddate={selectedDate}
             is-excluded={isExcluded}
+            show-mobile-worker-choice={showMobileWorkerChoice}
             >
     
             </c-mobile-appointment-booking-resource-assignment>
@@ -31,6 +32,7 @@
         onslotselection = {onSlotSelection}
         oncustomeventcalled = {onCustomEventCalled}
         time-slot-object = {timeSlotObject}
+        show-mobile-worker-choice={showMobileWorkerChoice}
         >
     </c-mobile-appointment-booking-slots-container >
 
