--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingResourceAssignment/mobileAppointmentBookingResourceAssignment.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingResourceAssignment/mobileAppointmentBookingResourceAssignment.html
@@ -1,23 +1,22 @@
 <template>
     <template lwc:if={showMobileWorkerChoice}>
         <div class="container">
-                <div class="title">{resourceAssignmentTitle}</div>
-                <div class="separator"></div>
-                <template lwc:if={showExcludedMsg}>
-                    <div class="mobile-worker-content">{excludedMsg}</div>
-                </template>
-                <template lwc:else>
-                    <div>
-                        <lightning-radio-group name="resourceAssignment"
-                                aria-label={resourceAssignmentTitle}
-                                options={options}
-                                value={value}
-                                type="radio"
-                                onchange={handleAssignmentMethodChange}
-                                >
-                        </lightning-radio-group>
-                    </div>
-                </template> 
+            <div class="title">{resourceAssignmentTitle}</div>
+            <div class="separator"></div>
+            <template lwc:if={showExcludedMsg}>
+                <div class="mobile-worker-content">{excludedMsg}</div>
+            </template>
+            <template lwc:else>
+                <div>
+                    <lightning-radio-group name="resourceAssignment"
+                        aria-label={resourceAssignmentTitle}
+                        options={options}
+                        value={value}
+                        type="radio"
+                        onchange={handleAssignmentMethodChange}>
+                    </lightning-radio-group>
+                </div>
+            </template> 
         </div>
     </template> 
 </template>
