--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
@@ -1,16 +1,10 @@
 <template>
-    <template if:true={showToast}>
-        <c-mobile-appointment-booking-custom-toast variant={toastVariant} title={toastTitle} message={toastMessage} onclosetoast ={HandleCloseToast}></c-mobile-appointment-booking-custom-toast> 
-    </template>
-
     <div class="landing-container">
         <div class="landing-section">
             <c-mobile-appointment-booking-compact-appointment-info
-                service-appointment-object={currentAppointmentData}
-                show-default-fields={useDefaultFields}
-                show-modal={showModal}
-                onclosemodal={closeModal}
-                onopenmodal={openModal}>
+                assign-to-name={assignToName}
+                compact-info-obj={compactInfoObj}
+                >
             </c-mobile-appointment-booking-compact-appointment-info>
         </div>       
         <div class="landing-section">
@@ -35,8 +29,9 @@
                 user-id={userId}
                 show-assignment-method-toggle={showAssignmentMethodToggle}
                 is-excluded={isExcluded}
+                user-name={userName}
+                assign-to-name={assignToName}
                 show-mobile-worker-choice={showMobileWorkerChoice}>
-                >
             </c-mobile-appointment-booking-scheduling-container>
         </div>
         <!-- SPINNER -->
