--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingResourceAssignment/mobileAppointmentBookingResourceAssignment.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingResourceAssignment/mobileAppointmentBookingResourceAssignment.html
@@ -7,16 +7,16 @@
                 <div class="mobile-worker-content">{excludedMsg}</div>
             </template>
             <template lwc:else>
-                <div>
+                <div class="resource-assignment-container">
                     <lightning-radio-group name="resourceAssignment"
                         aria-label={resourceAssignmentTitle}
                         options={options}
                         value={value}
                         type="radio"
                         onchange={handleAssignmentMethodChange}>
-                    </lightning-radio-group>
+                </lightning-radio-group>
                 </div>
             </template> 
         </div>
-    </template> 
+    </template>   
 </template>
