hide recomended slots header when array is empty, use score from settings instead of hardcoded

--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSchedulingContainer/mobileAppointmentBookingSchedulingContainer.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSchedulingContainer/mobileAppointmentBookingSchedulingContainer.html
@@ -32,7 +32,8 @@
         onslotselection = {onSlotSelection}
         oncustomeventcalled = {onCustomEventCalled}
         time-slot-object = {timeSlotObject}
-        show-mobile-worker-choice={showMobileWorkerChoice}>
+        show-mobile-worker-choice={showMobileWorkerChoice}
+        recommended-score={recommendedScore}>
     </c-mobile-appointment-booking-slots-container >
 
     
