--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingLanding/mobileAppointmentBookingLanding.html
@@ -3,8 +3,7 @@
         <div class="landing-section">
             <c-mobile-appointment-booking-compact-appointment-info
                 assign-to-name={assignToName}
-                compact-info-obj={compactInfoObj}
-                >
+                compact-info-obj={compactInfoObj}>
             </c-mobile-appointment-booking-compact-appointment-info>
         </div>       
         <div class="landing-section">
@@ -39,8 +38,7 @@
                 <lightning-spinner alternativetext="Loading" variant="brand" size="large">
                 </lightning-spinner>
             </div>
-        </template>
-            
+        </template>            
          <!-- SPINNER -->
     </div>  
 </template>
