--- a/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSettingsContainer/mobileAppointmentBookingSettingsContainer.html
+++ b/RescheduleAppointments/force-app/main/default/lwc/mobileAppointmentBookingSettingsContainer/mobileAppointmentBookingSettingsContainer.html
@@ -11,6 +11,6 @@
         enable-assign-to-me={enableAssignToMe}
         enable-assign-to-every-available={enableAssignToEveryAvailable}
         user-id={userId}
-        max-days-to-get-appointment-slots={maxDaysToGetAppointmentSlots}
-    ></c-mobile-appointment-booking-landing>    
+        max-days-to-get-appointment-slots={maxDaysToGetAppointmentSlots}>
+    </c-mobile-appointment-booking-landing>    
 </template>
