--- a/FindNearby/force-app/main/default/lwc/mobileMap/mobileMap.html
+++ b/FindNearby/force-app/main/default/lwc/mobileMap/mobileMap.html
@@ -30,13 +30,27 @@
                 </div>
                 <div class="card-main">
                     <div class="card-details">
-                        <div class="card-details-text">
-                            <p class="card-secondary-title">{currentMarkerDetailFieldName}</p>
-                            {currentMarkerDetailFieldValue}
+                        <div class="card-details-row first-row">
+                            <div class="card-details-text">
+                                <p class="card-secondary-title">{currentMarkerFirstDetailFieldName}</p>
+                                <p class="card-secondary-text">{currentMarkerFirstDetailFieldValue}</p>
+                            </div>
+                            <div class="card-details-text">
+                                <p class="card-secondary-title">Distance</p>
+                                <p class="card-secondary-text">{currentMarkerDistance}</p>
+                            </div>
                         </div>
-                        <div class="card-details-text">
-                            <p class="card-secondary-title">Distance</p>
-                            {currentMarkerDistance}
+                    </div>
+                    <div class="card-details">
+                        <div class="card-details-row">
+                            <div class="card-details-text">
+                                <p class="card-secondary-title">{currentMarkerSecondDetailFieldName}</p>
+                                <p class="card-secondary-text">{currentMarkerSecondDetailFieldValue}</p>
+                            </div>
+                            <div class="card-details-text">
+                                <p class="card-secondary-title">{currentMarkerThirdDetailFieldName}</p>
+                                <p class="card-secondary-text">{currentMarkerThirdDetailFieldValue}</p>
+                            </div>
                         </div>
                     </div>
                     <div class="card-buttons-container">
