--- a/FindNearby/force-app/main/default/lwc/mobileMapLayersMain/mobileMapLayersMain.html
+++ b/FindNearby/force-app/main/default/lwc/mobileMapLayersMain/mobileMapLayersMain.html
@@ -28,6 +28,7 @@
                 set-current-marker={setCurrentMarker}
                 redirect-to-marker-details={redirectToMarkerDetails}
                 route-to-marker-location={routeToMarkerLocation}
+                is-ios={isIos}
                 handle-error={handleError}>
             </c-locations-list>
         </div>
